<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_info"
        android:title="@string/menu_main_text_title_info"
        android:icon="@drawable/img_info_white"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/menu_main_text_title_settings"
        android:icon="@drawable/img_settings_white"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"        >
            <menu>
                <item android:id="@+id/english_language"
                    android:title="@string/menu_main_text_title_english" />
                <item android:id="@+id/belarusian_language"
                    android:title="@string/menu_main_text_title_belarusian" />
                <item android:id="@+id/russian_language"
                    android:title="@string/menu_main_text_title_russian" />
            </menu>
    </item>

</menu>


