<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_size_prod_square"
        style="@style/LinearLayoutStyle"
        tools:context=".fragment.SizeProdSquareFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_size_prod_square_name"
            android:textSize="@dimen/text_size_edit_text" />

        <EditText
            android:id="@+id/editTextLengthProduct"
            style="@style/EditTextStyle"
            android:hint="@string/edit_text_side_square"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_size_prod_rectangle_r"
            android:textSize="@dimen/text_size_edit_text" />

        <EditText
            android:id="@+id/editTextRadiusProduct"
            style="@style/EditTextStyle"
            android:hint="@string/edit_text_radius"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"/>

    </LinearLayout>