<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_info"
        android:title="@string/menu_main_text_title_info"
        android:icon="@drawable/img_info_white"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/img_send_white"
        android:orderInCategory="2"
        android:title="@string/menu_paint_text_title_send"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/img_save_white"
        android:orderInCategory="3"
        android:title="@string/menu_paint_text_title_save"
        app:showAsAction="ifRoom"/>

</menu>


