<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_expert"
    android:orientation="vertical"
    tools:context=".fragment.ExpertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LinearLayoutStyle">

        <TextView
            style="@style/TextViewExpert"
            android:gravity="center"
            android:text="@string/text_view_expert_set"
            android:layout_width="0dp"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/buttonSet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_expert_set"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LinearLayoutStyle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LinearLayoutStyle"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewBetweenProduct"
                style="@style/TextViewExpert"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextBetweenProduct"
                style="@style/EditTextStyle"
                android:ems="3"
                android:hint="@string/edit_text_expert_zero"
                android:importantForAutofill="no" />

            <TextView
                style="@style/TextViewExpert"
                android:text="@string/text_view_expert_mm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LinearLayoutStyle">

            <TextView
                android:id="@+id/textViewForEdgeForm"
                style="@style/TextViewExpert"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextForEdgeForm"
                style="@style/EditTextStyle"
                android:ems="3"
                android:hint="@string/edit_text_expert_zero"
                android:importantForAutofill="no" />

            <TextView
                style="@style/TextViewExpert"
                android:text="@string/text_view_expert_mm" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewForChain"
                style="@style/TextViewExpert"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextForChain"
                style="@style/EditTextStyle"
                android:ems="3"
                android:hint="@string/edit_text_expert_zero"
                android:importantForAutofill="no" />

            <TextView
                style="@style/TextViewExpert"
                android:text="@string/text_view_expert_mm" />

        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewShrinkagePS"
                style="@style/TextViewExpert"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextShrinkagePS"
                style="@style/EditTextStyle"
                android:ems="3"
                android:hint="@string/edit_text_expert_shrinkage_ps"
                android:importantForAutofill="no" />

            <TextView
                style="@style/TextViewExpert"
                android:text="@string/edit_text_expert_percent" />

        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewShrinkagePET"
                style="@style/TextViewExpert"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextShrinkagePET"
                style="@style/EditTextStyle"
                android:ems="3"
                android:hint="@string/edit_text_expert_shrinkage_pet"
                android:importantForAutofill="no" />

            <TextView
                style="@style/TextViewExpert"
                android:text="@string/edit_text_expert_percent" />

        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewShrinkagePVC"
                style="@style/TextViewExpert"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextShrinkagePVC"
                style="@style/EditTextStyle"
                android:ems="3"
                android:hint="@string/edit_text_expert_shrinkage_pvc"
                android:importantForAutofill="no" />

            <TextView
                style="@style/TextViewExpert"
                android:text="@string/edit_text_expert_percent" />

        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewShrinkagePP"
                style="@style/TextViewExpert"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextShrinkagePP"
                style="@style/EditTextStyle"
                android:ems="3"
                android:hint="@string/edit_text_expert_shrinkage_pp"
                android:importantForAutofill="no" />

            <TextView
                style="@style/TextViewExpert"
                android:text="@string/edit_text_expert_percent" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>