<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_num_product"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@drawable/custom_layout_fragment"
    tools:context=".fragment.NumProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/fragment_num_product"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/fragment_info_knife_close"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_delete"
            android:onClick="onClickClose"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMinusNumWidth"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:onClick="onClickMinusNumWidth"
            android:text="@string/fragment_num_product_width"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonMinusNumLenght"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:onClick="onClickMinusNumLenght"
            android:text="@string/fragment_num_product_step"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>